E1-977 spacing issue
E1-977 spacing issue

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/tabs/_tabs.scss
@@ -1432,6 +1432,11 @@
     &.cmp-tab--get-more {
       .cmp-teaser__content {
         margin-right: toRem(24);
+
+        @include rtlBlock() {
+          margin-right: 0;
+          padding-right: 0;
+        }
       }
 
       .img-static {
